# flappy_bird

./: .gitignore  Cargo.toml  README.md  api_server.py  build.rs  generate_zk_proof.sh  generate_zk_proof_fixed.sh  test_background_api.py
flappy-bird-game/: index.html  package-lock.json  package.json
flappy-bird-game/public/: index.html
flappy-bird-game/src/: App.js  App.tsx  SimpleFlappyBird.jsx  flappy_bird_with_zisk.jsx  game_integration.js  index.css
flappy-bird-game/src/components/: FlappyBirdGame.tsx  GameCanvas.tsx  GameOverlay.tsx  ZKProofScreen.tsx
flappy-bird-game/src/types/: game.ts
flappy-bird-game/src/utils/: apiService.ts  gamePhysics.ts
flappy_zisk/: Cargo.toml  build.rs
flappy_zisk/proof/: result.json
flappy_zisk/src/: main.rs
src/: game_integration.js  main.rs  score_integration.rs
