[package]
name = "flappy_zisk"
version = "0.1.0"
edition = "2021"
default-run = "flappy_zisk"

[build]
build = "build.rs"

[[bin]]
name = "flappy_zisk"
path = "src/main.rs"





[dependencies]
byteorder = "1.5.0"
sha2 = "0.10.8"
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[target.'cfg(target_os = "none")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
